I have gotten the images to layout the way I want now I am working on getting my user info/likes to align correctly in the overlay

--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,31 @@
+* {
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  margin: 10;
+  padding: 10; }
+
+body, html {
+  width: 1000px;
+  margin: 0 auto;
+  height: 100%; }
+
 #imageContainer {
-  display: flex;
-  flex-direction: column;
-  margin: 10px;
-  bottom: 0px;
-  position: relative;
-  align-items: center; }
+  margin: 10;
+  padding: 0;
+  height: 100%; }
+
+[class*='cat'] {
+  float: left;
+  height: 30%;
+  margin: 10px; }
+
+[class*='cat'] img {
+  height: 100%;
+  width: 100%; }
 
 q, p {
+  width: 100%;
   font-size: 12px;
   display: block;
   margin: 10px auto;
@@ -15,50 +34,48 @@ q, p {
 .overlay {
   color: white;
   visibility: hidden;
-  height: 0px; }
+  height: 0px;
+  overflow: hidden;
+  display: flex;
+  font-size: 12px; }
+
+.overlay img {
+  width: 10px;
+  margin: 10px !important; }
 
 h1 {
   font-family: futura-pt, sans-serif;
   font-weight: 300;
   font-style: normal;
-  text-align: center; }
+  text-align: center;
+  font-size: 48px;
+  margin: 0px;
+  padding: 0; }
 
 #globe {
   display: block;
   margin: 0 auto; }
 
-.overlay h2 {
-  align-items: center;
-  margin-right: 5px;
-  font-family: futura-pt, sans-serif;
-  font-weight: 300;
-  font-style: normal;
-  margin-top: 20px;
-  margin-bottom: 0px;
-  margin-left: 5px; }
-
-.overlay h3 {
-  font-family: Georgia, sans-serif;
-  margin-left: 5px;
-  margin-top: 25px; }
-
-.overlay img {
-  margin-top: 15px;
-  margin-left: 10px; }
-
-.cat:hover .overlay {
-  position: absolute;
+[class*="cat"]:hover .overlay {
+  position: relative;
   left: 0;
   right: 0;
-  transition: 2s 2.2s ease-in-out;
-  transform: translateY(-175px);
+  animation-name: slideUp;
+  animation-duration: .2s;
   background-color: rgba(0, 0, 0, 0.8);
-  transition-delay: .2s;
   visibility: visible;
-  height: 175px;
+  height: 100px;
   overflow: hidden;
-  width: 1295px;
+  width: 120px;
   margin: 0 auto; }
+
+.userInfo img, .likes img {
+  width: 10px; }
+
+.userInfo, .likes {
+  width: 10px;
+  color: white;
+  margin: 0px; }
 
 @media screen and (min-width: 320px) and (max-width: 425px) {
   .cat:hover .overlay {
@@ -85,12 +102,21 @@ h1 {
     display: flex;
     flex-direction: row; } }
 
-@media screen and (min-width: 769px) and (max-width: 1024px) {
+@media screen and (min-width: 769px) and (max-width: 1440px) {
   .cat:hover .overlay {
-    transform: translateY(-105px);
-    width: 92.5%;
+    animation-name: slideUp;
+    animation-duration: 5s;
+    animation-fill-mode: forwards;
+    width: 33%;
     height: 100px; }
-  #userInfo, #likes {
+  .userInfo, .likes {
     font-size: 12px;
     display: flex;
     flex-direction: row; } }
+
+@keyframes slideUp {
+  from {
+    transform: translateY(-100px);
+    animation-timing-function: ease-in; }
+  to {
+    animation-timing-function: ease-in; } }
