--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,18 +1,45 @@
 @import'utils/vars';
+*
+{
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    margin: 10;
+    padding: 10;
+}
+body, html
+{
+    width: 1000px;
+    margin: 0 auto;
+    height: 100%;
 
-#imageContainer
-{   display: flex;
-    //height: 100%;
-    flex-direction: column;
-    margin: 10px;
-    bottom: 0px;
-    position: relative;
-    align-items: center;
 }
 
+#imageContainer
+{ 
+    margin: 10;
+    padding: 0;
+    height: 100%;
+
+}
+
+[class*='cat']
+{
+
+    float: left;
+    height: 30%;
+    margin: 10px;
+}
+[class*='cat'] img
+{
+    height: 100%;
+    width: 100%;
+
+}
 q, p
 {
 
+    width: 100%;
     font-size: 12px;
     display: block;
     margin: 10px auto;
@@ -23,7 +50,17 @@ q, p
     color: white;
     visibility: hidden;
     height: 0px;
+    overflow: hidden;
+    display: flex;
+    font-size: 12px;
   
+}
+
+.overlay img
+{
+    width: 10px;
+    margin: 10px !important;
+
 }
 h1
 {
@@ -31,6 +68,9 @@ h1
     font-weight: $weight;
     font-style: $font-style;
     text-align: center;
+    font-size: 48px;
+    margin: 0px;
+    padding: 0;
 }
 #globe
 {
@@ -38,46 +78,35 @@ h1
     display: block;
     margin: 0 auto;
 }
-.overlay h2
-{   
-    align-items: center;
-    margin-right: 5px;
-    font-family:  $font-stack;
-    font-weight: $weight;
-    font-style: $font-style;
-    margin-top: 20px;
-    margin-bottom: 0px;
-    margin-left: 5px;
-}
-.overlay h3
+
+
+[class*="cat"]:hover .overlay
 {
-    font-family: $font-stack2;
-    margin-left: 5px;
-    margin-top: 25px;
-}
-.overlay img
-{
-    margin-top: 15px;
-    margin-left: 10px;
-}
-.cat:hover .overlay
-{
-  
-    position: absolute;
+ position: relative;
     left: 0;
     right: 0;
-    transition: 2s 2.2s ease-in-out;
-    transform: translateY(-175px);
-    background-color: rgba(0, 0, 0, .8);
-    transition-delay: .2s;
+    animation-name: slideUp;
+    animation-duration: .2s;
+    background-color: rgba(0,0,0, .8);
     visibility: visible;
-    height:175px;
+    height: 100px;
     overflow: hidden;
-    width: 1295px;
+    width: 120px;
     margin: 0 auto;
-
 }
 
+.userInfo img, .likes img
+{
+    width: 10px;
+
+}
+.userInfo, .likes
+{
+width: 10px;
+color: white;
+margin: 0px;
+
+}
 @media screen and (min-width:320px) and (max-width: 425px) 
 {
    .cat:hover .overlay
@@ -118,18 +147,32 @@ h1
          flex-direction: row;
     }
 }
-@media screen and(min-width: 769px)and (max-width: 1024px)
+@media screen and(min-width: 769px)and (max-width: 1440px)
 {
     .cat:hover .overlay
     {
-         transform: translateY(-105px);
-         width: 92.5%;
+        animation-name: slideUp;
+        animation-duration: 5s;
+        animation-fill-mode: forwards;
+         width: 33%;
          height: 100px;
     }
-    #userInfo, #likes
+    .userInfo, .likes
     {
          font-size: 12px;
          display: flex;
          flex-direction: row;
     }
+}
+
+@keyframes slideUp
+{
+    from
+    {
+        transform: translateY(-100px);
+        animation-timing-function: ease-in;
+    }
+    to{
+       animation-timing-function: ease-in;
+   }
 }
